1st page design finished

--- a/views/eerror.handlebars
+++ b/views/eerror.handlebars
@@ -1,7 +1,15 @@
-<nav>
-<h1>错误</h1>
-</nav>
-<section>
-  <h2><a href="/">主页</a></h2>
-  <h2><a href="/login">登录</a></h2>
-</section>
+<div class="container">
+  <nav aria-label="breadcrumb" role="navigation">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <a href="/">Home</a>
+      </li>
+      <li class="breadcrumb-item active" aria-current="page">Error</li>
+    </ol>
+  </nav>
+  <h1 class="text-danger text-center">Login Error</h3>
+    <p class="text-warning text-center">Name or Code </p>
+    <a href="/login">
+      <img src="/image/bad-login-error.png" class="img-responsive center-block" />
+    </a>
+</div>
