--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,4 +1,6 @@
 <footer>
-  <p>- 2017 - </p>
-
+  <div class="container">
+    <p class="text-center"> -
+      <span class="badge badge-light">Ruff.io</span>- 2017 - </p>
+  </div>
 </footer>
