--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,2 +1,9 @@
-<meta name="author" content="Jun"/>
-
+<meta charset="utf-8">
+<meta name="description" content="功夫孵化器">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Jun" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="icon" href="/favicon.ico">
+<link rel="stylesheet" href="/css/bootstrap.css">
+<link rel="stylesheet" href="/css/main.css">
+<script src="/js/modernizr.js"></script>
