--- a/views/elogin.handlebars
+++ b/views/elogin.handlebars
@@ -1,14 +1,19 @@
-<nav>
-<h1>login</h1>
-</nav>
-<section>
-  <form method="post" action="/login">
-  <input type="text" id="user" name="user" />
-  <input type="password" id="pass" name="pass" />
-  <button type="submit">登录</button>
+<div class="container">
+  <nav aria-label="breadcrumb" role="navigation">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <a href="/">Home</a>
+      </li>
+      <li class="breadcrumb-item active" aria-current="page">Login</li>
+    </ol>
+  </nav>
+  <form class="form-signin" action="/login" method="post">
+    <h1 class="form-signin-heading">Please sign in</h1>
+    <label for="inputName" class="sr-only">Name</label>
+    <input type="text" id="inputName" class="form-control" placeholder="Name" name="user" required autofocus />
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="pass" required>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
-</section>
 
-<section>
-  <h2><a href="/">主页</a></h2>
-</section>
+</div>
