--- a/views/500.handlebars
+++ b/views/500.handlebars
@@ -1,1 +1,14 @@
-<h1>500</h1>
+<div class="container">
+    <nav aria-label="breadcrumb" role="navigation">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="/">home</a>
+            </li>
+        </ol>
+    </nav>
+    <h1>500</h1>
+    <p>Server Error</p>
+</div>
+<script src="/js/jquery.js"></script>
+<script src="/js/popper.js"></script>
+<script src="/js/bootstrap.js"></script>
