--- a/views/eerror.handlebars
+++ b/views/eerror.handlebars
@@ -13,3 +13,6 @@
       <img src="/image/bad-login-error.png" class="img-responsive center-block" />
     </a>
 </div>
+<script src="/js/jquery.js"></script>
+<script src="/js/popper.js"></script>
+<script src="/js/bootstrap.js"></script>
