--- a/views/elogin.handlebars
+++ b/views/elogin.handlebars
@@ -17,3 +17,6 @@
   </form>
 
 </div>
+<script src="/js/jquery.js"></script>
+<script src="/js/popper.js"></script>
+<script src="/js/bootstrap.js"></script>
