--- a/views/home-visitor.handlebars
+++ b/views/home-visitor.handlebars
@@ -14,3 +14,7 @@
         </p>
     </div>
 </div>
+
+<script src="/js/jquery.js"></script>
+<script src="/js/popper.js"></script>
+<script src="/js/bootstrap.js"></script>
