--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -40,8 +40,16 @@ body {
 /* Custom page footer */
 .footer {
   padding-top: 19px;
-  color: #777;
+  padding-bottom:  19px;
+  // color: #777;
   border-top: 1px solid #e5e5e5;
+  background-color:rgb(12, 99, 185);
+  // height:300px;
+  // position:absolute;
+  width:100%;
+  font-weight:lighter;
+  color:white;
+  margin-top: 4em;
 }
 
 /* Customize container */
@@ -129,4 +137,18 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+
+.footerHeader{
+  width:100%;
+  padding:1em;
+  background-color:rgb(89, 124, 160);
+  text-align:center;
+  color:white;
+  margin-bottom: 1em;
+}
+
+.footer-endline{
+  text-align: right;
 }
