--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,1 +1,14 @@
-<h1>404</h1>
+<div class="container">
+    <nav aria-label="breadcrumb" role="navigation">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="/">home</a>
+            </li>
+        </ol>
+    </nav>
+    <h1>404</h1>
+</div>
+
+<script src="/js/jquery.js"></script>
+<script src="/js/popper.js"></script>
+<script src="/js/bootstrap.js"></script>
