--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,22 +4,24 @@
       <li class="breadcrumb-item">
         <a href="#">Home</a>
       </li>
-      <li class="breadcrumb-item active" aria-current="page">Logout</li>
+      <li class="breadcrumb-item active" aria-current="page">
+        <a href="/logout">Logout</a>
+      </li>
     </ol>
   </nav>
   <div class="jumbotron">
     <h1>孵化器灯控</h1>
     <p class="lead">Light Control Interface</p>
     <p>
-      <a class="btn btn-block btn-danger" href="#">全关 Off</a>
-      <a class="btn btn-block btn-success" href="#">全开 On</a>
-      <a class="btn btn-block btn-info" href="#">查询 Query</a>
+      <a class="btn  btn-block btn-danger" href="#">全关 Off</a>
+      <a class="btn  btn-block btn-success" href="#">全开 On</a>
+      <a class="btn  btn-block btn-info" href="#">查询 Query</a>
     </p>
   </div>
   <div class="row marketing">
     <div class="col-lg-12">
       <table class="table">
-        <caption>开关状态</caption>
+        <caption class="text-center">开关状态</caption>
         <thead>
           <tr>
             <th>Name</th>
@@ -29,116 +31,6 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>A1</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>A2</td>
-            <td>
-              <span class="glyphicon glyphicon-exclamation-sign text-info glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B1</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B2</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-danger glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B3</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B4</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B5</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B6</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B7</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-danger glyphicon-bigger"></span>
-            </td>
-            <td>B8</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>A5</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B9</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>A3</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>A4</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B10</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B11</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B12</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B13</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B14</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B15</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
-          <tr>
-            <td>B16</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-            <td>B17</td>
-            <td>
-              <span class="glyphicon glyphicon-star text-success glyphicon-bigger"></span>
-            </td>
-          </tr>
         </tbody>
       </table>
       <h3>Legend</h3>
@@ -149,3 +41,8 @@
   </div>
 
 </div>
+
+<script src="/js/jquery.js"></script>
+<script src="/js/popper.js"></script>
+<script src="/js/bootstrap.js"></script>
+<script src="/js/main.js"></script>
