--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    {{>header}}
-  </head>
-  <body>
-    {{{body}}}
-    {{>footer}}
-    {{>jsfooter}}
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  {{>header}}
+</head>
+
+<body>
+  {{{body}}} {{>footer}}
+</body>
+
 </html>
