--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,23 @@
-<footer>
+<footer class="footer">
+  {{!--
+  <div class="footerHeader"></div> --}}
   <div class="container">
-    <p class="text-center"> -
-      <span class="badge badge-light">Ruff.io</span>- 2017 - </p>
+    <div class="col-md-6">
+      <p>
+        灯光控制系统
+      </p>
+    </div>
+
+
+    <div class="col-md-6">
+      <h3>Contact Us</h3>
+      <ul>
+        <li>Phone : 123 - 456 - 789</li>
+        <li>E-mail : info@comapyn.com</li>
+      </ul>
+      <p class="footer-endline">
+        2017 Dec
+      </p>
+    </div>
   </div>
 </footer>
