--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -13,7 +13,7 @@
       <h3>Contact Us</h3>
       <ul>
         <li>Phone : 123 - 456 - 789</li>
-        <li>E-mail : info@comapyn.com</li>
+        <li>E-mail : yangjun@nanchao.org </li>
       </ul>
       <p class="footer-endline">
         2017 Dec
