--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -30,7 +30,7 @@
             <th>Status</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="tableBody">
         </tbody>
       </table>
       <h3>Legend</h3>
