--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -26,8 +26,7 @@
           <tr>
             <th>Name</th>
             <th>Status</th>
-            <th>Name</th>
-            <th>Status</th>
+            <th>Latest</th>
           </tr>
         </thead>
         <tbody id="tableBody">
